# little_boxes

./: .gitignore  .goreleaser.yml  .travis.yml  .yamllint.yml  Cargo.toml  README.md  build.rs  build_manpage.sh  flake.nix  little_boxes.1  little_boxes.rb  main.rs
.devcontainer/: Dockerfile
.github/: dependabot.yml
.github/actions/: setup-rust.yml
.github/actions/setup-rust/: action.yml
.github/workflows/: hooks.yml  nix.yml  publish.yml  release.yml  rust.yml
src/: LICENSE  charset.rs  cli.rs  draw_box.rs  main.rs
tests/: cli_tests.rs
tests/cmd/: charsets-all-title.toml  charsets-all.toml  charsets.md  file.in  file.md  help.md  stdin.toml
tests/cmd/emoji/: emoji-bytes.toml  emoji-title.toml  hello-ferris.toml  thumbsup.toml
