[package]
authors = ["Gio d'Amelio <gio@damelio.net>"]
description = "Adds boxes around stdin. Optionally adds a title"
documentation = "https://github.com/giodamelio/little_boxes"
homepage = "https://github.com/giodamelio/little_boxes"
license = "MIT"
name = "little_boxes"
repository = "https://github.com/giodamelio/little_boxes"
version = "1.8.0"
edition = "2021"

[dependencies]
clap = {version = "4.3.19", features = ["default", "cargo"]}
trycmd = {version = "0.14.19", features = ["default"]} # add "debug" feature if you're having trouble
strip-ansi-escapes = "0.1.1"
anyhow = "1.0.72"

[build-dependencies]
clap = {version = "4.3.19", features = ["default", "cargo"]}
clap_mangen = "0.2.12"

[features]
