[package]
authors = ["Gio d'Amelio <gio@damelio.net>"]
description = "Adds boxes around stdin. Optionally adds a title"
documentation = "https://github.com/giodamelio/little_boxes"
homepage = "https://github.com/giodamelio/little_boxes"
license = "MIT"
name = "little_boxes"
repository = "https://github.com/giodamelio/little_boxes"
version = "1.8.0"
edition = "2021"

[dependencies]
clap = {version = "4.5.3", features = ["default", "cargo"]}
trycmd = {version = "0.15.0", features = ["default"]} # add "debug" feature if you're having trouble
strip-ansi-escapes = "0.2.0"
anyhow = "1.0.81"

[build-dependencies]
clap = {version = "4.5.3", features = ["default", "cargo"]}
clap_mangen = "0.2.20"
clap_complete = "4.5.1"

[features]
