[package]
authors = ["Gio d'Amelio <gio@damelio.net>"]
description = "Adds boxes around stdin. Optionally adds a title"
documentation = "https://github.com/giodamelio/little_boxes"
homepage = "https://github.com/giodamelio/little_boxes"
license = "MIT"
name = "little_boxes"
repository = "https://github.com/giodamelio/little_boxes"
version = "1.12.0"
edition = "2024"

[dependencies]
clap = {version = "4.6.1", features = ["default", "cargo"]}
strip-ansi-escapes = "0.2.1"
anyhow = "1.0.102"
unicode-width = "0.2.2"

[build-dependencies]
clap = {version = "4.6.1", features = ["default", "cargo"]}
clap_mangen = "0.2.33"
clap_complete = "4.6.2"
clap_complete_nushell = "4.6.0"

[dev-dependencies]
trycmd = {version = "0.15.11", features = ["default"]} # add "debug" feature if you're having trouble

[features]
